# benchmark_fun

./: .clang-format  .gitignore  CMakeLists.txt  README.md  benchmark  benchmark.cpp  main.cpp  no_unique_address  test.cpp  timer.hpp
benchmarks/: benchable.hpp  branch_prediction_sorted.hpp  branch_prediction_unsorted.hpp
benchmarks/rng/: xoroshiro128+.hpp
one_and_dones/: 3  CRTP.cpp  EBO.cpp  README.md  a.out  allocation_elision.cpp  as_if_rule.cpp  hashing.cpp  lambdas_size.cpp  no_unique_address.cpp  padding.cpp  printing.cpp  ring_buffers.cpp  ringbuffer.cpp  rvo.cpp  template_instantiation.cpp  type_erasure.cpp
one_and_dones/compile_time_csv/: example.cpp  example.csv
one_and_dones/compile_time_state/: a.out  basic_example.cpp
src/: cache_sizes.hpp  startup.hpp  timer.hpp
src/benchmarks/: bench_factory.hpp  bench_runner.hpp  bench_types.hpp  benchable.hpp  branch_prediction_sorted.hpp  branch_prediction_unsorted.hpp
src/benchmarks/MPMC/: MPMC_bencher.hpp  atomics.hpp  locked.hpp  vyukov.hpp
src/benchmarks/SOA_AOS/: structures.hpp
src/benchmarks/SSO/: small_string_optimisation.hpp
src/benchmarks/alignment/: alignment.hpp  generic.hpp
src/benchmarks/allocation/: allocation.hpp  arena.hpp  new.hpp
src/benchmarks/attributes/: likely_attributes.hpp
src/benchmarks/binary_search/: binary_search.hpp
src/benchmarks/branch_prediction/: attributes.hpp  branch_prediction_sorted.hpp  branch_prediction_unsorted.hpp
src/benchmarks/container/: containers.hpp
src/benchmarks/execution_policies/: policies.hpp
src/benchmarks/localities/: data_localities.hpp
src/benchmarks/ring_buffers/: cachy.hpp  classic.hpp  condensed_cachy.hpp  ring_buffer_tester.hpp  slot.hpp
src/benchmarks/rng/: arrayfill.hpp  mersenne_twister.hpp  xoroshiro128+.hpp  xoroshiro64star.hpp
src/benchmarks/software_prefetching/: prefetch.hpp
src/benchmarks/vector_access/: vectors.hpp
src/benchmarks/weird_vector/: reserve_vector.hpp
src/stats/: anovas.hpp  student_T_tests.hpp
src/utils/: aligned_allocator.hpp  arena.hpp  concepts.hpp  sparse_set.hpp  xoroshiro_64_star.hpp
